# xav

./: Cargo.toml  README.md  build.rs  build.sh
.cargo/: config.toml  config.toml.dynamic_lib  config.toml.dynamic_lib_notq  config.toml.dynamic_notq  config.toml.static  config.toml.static_notq
.github/workflows/: windows.yml
src/: audio.rs  chunk.rs  decode.rs  encode.rs  encoder.rs  ffms.rs  main.rs  progs.rs  svt.rs  tests.rs  tq.rs  worker.rs
