[package]
name = "xav"
version = "0.1.0"
authors = ["Emre Akyüz emreakyuz_2@hotmail.com"]
edition = "2024"
description = "Fastest, Most Efficient, Minimal, Chunked & Target Quality Video Encoding"
readme = "README.md"
homepage = "https://github.com/emrakyz/xav"
repository = "https://github.com/emrakyz/xav"
license = "MIT"
keywords = ["av1", "video", "multimedia", "encoding", "quality", "chunking"]
categories = ["multimedia::video", "command-line-utilities"]

[features]
default = []
static = []
vship = []
nvidia = []
amd = []
vcpkg = []

[dependencies]
libc = "0.2.180"
crossbeam-channel = "0.5.15"
crossterm = "0.29"
ffms2-sys = { version = "0.3.0", features = ["static"] }
av-decoders = { git = "https://github.com/rust-av/av-decoders", default-features = false, features = ["ffms2"] }
av-scenechange = { git = "https://github.com/rust-av/av-scenechange", default-features = false, features = ["ffms2", "asm", "nasm-rs", "cc", "libc"] }
av1-grain = { version = "0.3.0", default-features = false, features = ["create"] }
sonic-rs = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }

[patch.crates-io]
av-decoders = { git = "https://github.com/rust-av/av-decoders" }

[build-dependencies]
vcpkg = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
lto = "fat"
